# agent-pod-lab

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  experiments.yaml  gunicorn.conf.py  prepare.py  pyproject.toml  scheduler_config.yaml  setup_pod.sh  train.py
.claude/: orchestrator-reference.md  runpod-reference.md  settings.json  vps-reference.md
.claude/agents/: experiment-runner.md
.claude/skills/add-experiment/: SKILL.md
.claude/skills/check-experiments-status/: SKILL.md
.claude/skills/export-results/: SKILL.md
.claude/skills/list-available-gpus/: SKILL.md
api/: app.py  dependencies.py
api/routers/: experiments.py  monitoring.py
experiments/adamw-optimizer/: README.md  train.py
experiments/baseline/: README.md  train.py
experiments/gelu-activation/: README.md  train.py
experiments/k256-omega09/: README.md  train.py
experiments/k512-sign-correction/: README.md  train.py
experiments/lr-sweep-low/: README.md  train.py
experiments/no-gnn/: README.md  train.py
experiments/omega-085/: README.md  train.py
experiments/omega-095/: README.md  train.py
experiments/sign-correction/: README.md  train.py
lib/: data.py  evaluation.py  training.py
lib/architectures/: neumann.py  neumann_gelu.py
orchestrator/: __init__.py  cloudflare_storage.py  errors.py  experiment.py  models.py  notification.py  pod.py
orchestrator/adapters/: cloudflare.py  runpod.py  smtp.py
orchestrator/ports/: __init__.py  compute.py  notification.py  storage.py
prompts/: father-prompt.md
systemd/: agent-pod-lab.service
tests/: test_runpod.py
(+1 files in other folders)
